--- a/index.hbs
+++ b/index.hbs
@@ -2,21 +2,9 @@
 
 <main id="site-main" class="site-main">
   <div class="inner">
-    <div class="post-feed">
+    <div class="post-feed excerpts">
       {{#foreach posts}}
-        <article class="post" {{post_class}}>
-          {{#if feature_image}}
-          {{/if}}
-          <h1 class="title">{{title}}</h1>
-          <time class="publish-date">{{date format="dddd, MMMM Do YYYY"}}</time>
-          <div class="content">
-            <section class="full">
-              {{content}}
-            </section>
-            <footer class="meta">
-            </footer>
-          </div>
-        </article>
+        {{> "post-excerpt"}}
       {{/foreach}}
     </div>
   </div>
