Homepage with post-excerpt list laid-out properly!

--- a/assets/scss/partials/default.scss
+++ b/assets/scss/partials/default.scss
@@ -25,6 +25,7 @@ body > .wrapper {
   .content-wrapper {
     display: block;
     float: right;
+    padding-top: 30px;
     box-sizing: border-box;
     width: calc(100vw - #{$sidebar-width});
   }
