--- a/assets/scss/screen.scss
+++ b/assets/scss/screen.scss
@@ -3,7 +3,7 @@
 @import "partials/reset";
 @import "partials/compat";
 @import "partials/default";
+@import "partials/pagination";
 @import "partials/typography";
 @import "partials/sidebar";
 @import "partials/post";
-@import "partials/footer";
