--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,12 +1,20 @@
 <div class="sidebar">
   <div class="inner">
+    {{#if @site.logo}}
+      <a class="logo" href="{{@site.url}}">
+        <img src="{{@site.logo}}" alt="logo"/>
+      </a>
+    {{/if}}
     <h1 class="site-title">{{@site.title}}</h1>
     <h2 class="site-description">{{@site.description}}</h2>
+    <nav>
+      {{navigation}}
+    </nav>
     <footer class="site-footer">
       <div class="inner">
-        <nav>
-          <a href="{{@site.url}}">Home</a>
-        </nav>
+        <section class="social-links">
+          <a class="subscribe" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
+        </section>
         <section class="copyright">
           <a href="{{@site.url}}">{{@site.title}}</a> &copy; {{date format="YYYY"}}
         </section>
