--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -9,9 +9,9 @@
   margin: 0;
   width: 300px;
   height: 100vh;
-  background: $muted-accent;
-  box-shadow: 3px 0 3px lighten($muted-accent, 10%);
-  border-right: 2px solid lighten($muted-accent, 10%);
+  background: $sidebar-background-color;
+  box-shadow: 3px 0 3px lighten($sidebar-border-color, 10%);
+  border-right: 2px solid lighten($sidebar-border-color, 10%);
 
   .inner {
     display: block;
@@ -20,7 +20,7 @@
 
     h1,
     h2 {
-      color: $white;
+      color: $sidebar-text-color;
     }
 
     h2 {
@@ -35,7 +35,7 @@
       }
       a {
         display: block;
-        color: $white;
+        color: $sidebar-text-color;
       }
     }
 
@@ -55,18 +55,18 @@
     text-align: center;
     line-height: 1.5rem;
     padding: 10px 0 30px;
-    color: $white;
+    color: $footer-text-color;
 
     section.social-links {
       a {
-        color: $white;
+        color: $footer-text-color;
       }
     }
     section.copyright {
       font-size: 0.75rem;
       a {
-        color: $white;
-        border-color: $white;
+        color: $footer-text-color;
+        border-color: $footer-text-color;
         border-width: 1px;
       }
     }
