Restructured, dark theme, media-queries, mobile changes.

--- a/assets/scss/partials/compat.scss
+++ b/assets/scss/partials/compat.scss
@@ -3,5 +3,73 @@
 .kg-gallery-container,
 .kg-gallery-row,
 .kg-gallery-image {
-  display: block;
+  display: inherit;
+}
+
+.kg-gallery-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+  .kg-gallery-image {
+    flex: 1;
+    box-sizing: border-box;
+    img {
+      max-height: 250px;
+      max-width: 250px;
+    }
+  }
+}
+
+#kg-gallery-zoom {
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  left: 0px;
+  overflow: hidden;
+  padding: 30px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+}
+#kg-gallery-zoom img {
+  cursor: zoom-out;
+  height: auto;
+  height: auto;
+  left: 50%;
+  max-height: 80%;
+  max-width: 80%;
+  position: absolute;
+  top: 0;
+  top: 5%;
+  transform: translateX(-50%);
+  width: auto;
+}
+.kg-gallery-image img {
+  cursor: zoom-in;
+}
+.kg-gallery-btn {
+  background-color: #000;
+  border-radius: 50%;
+  color: #fff;
+  display: inline-block;
+  height: 30px;
+  line-height: 30px;
+  margin: 0.25em;
+  text-align: center;
+  width: 30px;
+}
+.kg-gallery-btn:active,
+.kg-gallery-btn:focus {
+  background-color: #ccff00;
+}
+
+#kg-gallery-buttons {
+  bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  position: fixed;
+  text-align: center;
+  width: 100%;
+  z-index: 99999;
 }
