--- a/assets/scss/partials/default.scss
+++ b/assets/scss/partials/default.scss
@@ -15,18 +15,31 @@ pre {
 body > .wrapper {
   display: inline-block;
 
-  .sidebar-wrapper {
-    display: block;
-    width: $sidebar-width;
-    float: left;
-    box-sizing: border-box;
+  @include respond-below(md) {
+    .sidebar-wrapper {
+      display: none;
+    }
+
+    .content-wrapper {
+      display: block;
+      box-sizing: border-box;
+      width: 100vw;
+    }
   }
 
-  .content-wrapper {
-    display: block;
-    float: right;
-    padding-top: 30px;
-    box-sizing: border-box;
-    width: calc(100vw - #{$sidebar-width});
+  @include respond-above(md) {
+    .sidebar-wrapper {
+      display: block;
+      width: $sidebar-width;
+      float: left;
+      box-sizing: border-box;
+    }
+
+    .content-wrapper {
+      display: block;
+      float: right;
+      box-sizing: border-box;
+      width: calc(100vw - #{$sidebar-width});
+    }
   }
 }
