--- a/assets/scss/partials/post.scss
+++ b/assets/scss/partials/post.scss
@@ -1,12 +1,57 @@
 .post-feed {
   display: block;
   margin: 0 auto;
+
   &.excerpts {
     display: flex;
+    position: relative;
     flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-start;
+    overflow-x: auto;
+    min-height: 90vh;
+    @include respond-above(md) {
+      min-height: 100vh;
+    }
+  }
+}
+
+.post-container {
+  @include respond-below(md) {
+    &.post-full:not(.has-featured-image) {
+      margin-top: calc(#{$mobile-menu-height} + 30px);
+    }
+  }
+
+  .featured-image {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  &.has-featured-image {
+    article.post {
+      margin-top: -150px;
+
+      &.post-excerpt {
+        display: block;
+        border-radius: 3px;
+        z-index: 10;
+        flex-grow: 1;
+        max-width: 500px;
+        padding: 0;
+        margin: 30px 15px;
+      }
+
+      & > .content {
+        padding: 15px 25px 25px;
+      }
+    }
   }
 }
 
@@ -18,6 +63,15 @@ article.post {
   border-radius: 3px;
   background: $post-background-color;
   box-sizing: border-box;
+
+  a {
+    border-bottom: 3px solid $accent-text-color;
+
+    &.feature-link {
+      display: block;
+      border-bottom: none;
+    }
+  }
 
   h1.title {
     margin-bottom: 0px;
@@ -52,8 +106,9 @@ article.post {
   }
 
   &.post-excerpt {
-    min-height: 275px;
     display: block;
+    min-width: 350px;
+    border-radius: 3px;
     z-index: 10;
     flex-grow: 1;
     max-width: 500px;
@@ -62,20 +117,17 @@ article.post {
     transition: background 0.2s ease-in-out, transform 0.2s ease-in-out,
       box-shadow 0.15s ease-in-out;
 
+    &:first-child {
+      padding-top: 35px;
+    }
+
     &:hover {
-      background: lighten($white, 5%);
+      background: lighten($post-background-color, 5%);
       transform: translate(-2px, -2px);
       box-shadow: 3px 3px 5px darken($post-background-color, 40%);
 
       time {
         background: darken($post-accent-color, 10%);
-      }
-    }
-
-    &.has-featured-image {
-      padding: 0;
-      & > .content {
-        padding: 15px 25px 25px;
       }
     }
   }
