--- a/assets/scss/screen.scss
+++ b/assets/scss/screen.scss
@@ -3,7 +3,7 @@
 
 /* SASS Specific Utility Declarations */
 @import "utils/mixins";
-@import "themes/dark";
+@import "themes/light";
 
 /* Styles */
 @import "partials/reset";
