--- a/partials/post-excerpt.hbs
+++ b/partials/post-excerpt.hbs
@@ -9,7 +9,7 @@
   </time>
   {{#if feature_image}}
     <a class="feature-link" href="{{url}}" alt="{{slug}}">
-      <img src="{{feature_image}}" alt="feature" />
+      <div style="background-image:url('{{feature_image}}')"></div>
     </a>
   {{/if}}
   <div class="content">
