--- a/partials/post-full.hbs
+++ b/partials/post-full.hbs
@@ -9,7 +9,7 @@
     style="background-image: url('{{feature_image}}')"
   ></div>
 {{/if}}
-<article class="post" {{post_class}}>
+<article class="post post-full" {{post_class}}>
   <h1 class="title">
     <a href="{{url}}">
       {{title}}
