--- a/index.hbs
+++ b/index.hbs
@@ -2,7 +2,7 @@
 
 <main id="site-main" class="site-main">
   <div class="inner">
-    <div class="post-feed excerpts">
+    <div class="post-feed excerpts grid">
       {{#foreach posts}}
         {{> "post-excerpt"}}
       {{/foreach}}
