--- a/partials/post-excerpt.hbs
+++ b/partials/post-excerpt.hbs
@@ -1,5 +1,5 @@
 {{#if feature_image}}
-<div class="post-container has-featured-image">
+<div class="post-container has-featured-image grid-item">
 {{else}}
 <div class="post-container">
 {{/if}}
