--- a/default.hbs
+++ b/default.hbs
@@ -29,6 +29,7 @@
     </script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
+    <script src="{{asset "built/smartresize.js"}}" type="text/javascript"></script>
     <script src="{{asset "built/index.js"}}" type="text/javascript"></script>
     
     {{{block "scripts"}}}
