--- a/assets/scss/themes/dark.scss
+++ b/assets/scss/themes/dark.scss
@@ -30,3 +30,6 @@ $footer-text-color: $white;
 /* Post */
 $post-background-color: $primary;
 $post-accent-color: $muted-accent;
+
+/* Cards */
+$card-background-color: $primary;
