--- a/default.hbs
+++ b/default.hbs
@@ -19,6 +19,7 @@
       </div>
       <div class="content-wrapper">
         {{{body}}}
+        <div class="clearfix"></div>
         {{> "mobile-footer"}}
       </div>
     </div>
