--- a/post.hbs
+++ b/post.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 {{#post}}
   <main id="site-main" class="site-main">
-    <div class="inner">
+    <div class="inner no-padding">
       {{> "post-full"}}
     </div>
   </main>
