--- a/assets/scss/partials/post.scss
+++ b/assets/scss/partials/post.scss
@@ -7,15 +7,6 @@
 
   &.excerpts {
     padding: 10px;
-
-    @include respond-below(md) {
-      margin-top: 50px;
-    }
-
-    @include respond-below(sm) {
-      margin-top: 65px;
-      padding: 0;
-    }
   }
 }
 
@@ -74,8 +65,11 @@ article.post {
   box-sizing: border-box;
 
   &.post-full {
+    position: relative;
     max-width: 800px;
+    margin-bottom: 145px;
     box-shadow: 2px 2px 4px darken($post-background-color, 50%);
+    z-index: 100;
   }
 
   &.post-excerpt {
@@ -105,6 +99,26 @@ article.post {
       background-size: cover;
       background-repeat: no-repeat;
     }
+
+    .author {
+      float: left;
+      margin: 0 0 5px 0;
+      padding: 0;
+      font-size: 0.9em;
+      a {
+        border-bottom: none;
+      }
+    }
+
+    .tags {
+      float: right;
+      margin-bottom: 5px;
+      a {
+        font-size: 0.9rem;
+        border-width: 1px;
+        margin: 0;
+      }
+    }
   }
 
   a {
@@ -124,15 +138,6 @@ article.post {
     }
   }
 
-  .tags {
-    margin-bottom: 5px;
-    a {
-      font-size: 0.9rem;
-      border-width: 1px;
-      margin: 0;
-    }
-  }
-
   time.publish-date {
     position: absolute;
     z-index: 1;
@@ -146,5 +151,58 @@ article.post {
     background: $post-accent-color;
     border-radius: 5px 5px 0 0;
     transition: background 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  }
+
+  .author-info {
+    position: absolute;
+    background-color: $post-accent-color;
+    bottom: -105px;
+    left: 0;
+    width: 90%;
+    padding: 0;
+    margin: 0 5%;
+    border-radius: 0 0 5px 5px;
+    box-sizing: border-box;
+    z-index: 10;
+
+    .author {
+      margin: 0;
+      color: $inverted-text-color;
+
+      h1,
+      i,
+      p,
+      a {
+        color: $inverted-text-color;
+      }
+
+      h1 {
+        margin-bottom: 5px;
+        a {
+          font-family: monospace;
+        }
+      }
+
+      p {
+        margin: 5px 0;
+      }
+
+      img.profile-image {
+        float: left;
+        width: 64px;
+        height: 64px;
+        padding: 5px 5px 5px 0;
+      }
+
+      .author-meta {
+        display: flex;
+        & > * {
+          padding: 0 5px;
+          &:first-child {
+            padding-left: 0;
+          }
+        }
+      }
+    }
   }
 }
