--- a/partials/mobile-menu.hbs
+++ b/partials/mobile-menu.hbs
@@ -1,4 +1,5 @@
-<nav id="mobile-menu">
+<nav id="mobile-header">
+  <i class="menu-toggle fa fa-bars"></i>
   <a class="site-link" href="{{@site.url}}">
     {{#if @site.logo}}
       <img src="{{@site.logo}}" alt="logo" />
@@ -6,4 +7,15 @@
       {{@site.title}}
     {{/if}}
   </a>
+  <div class="menu">
+    <div class="inner">
+      <h1 class="site-title">
+        {{@site.title}}
+      </h1>
+      <h2 class="site-description">
+        {{@site.description}}
+      </h2>
+      {{navigation}}
+    </div>
+  </div>
 </nav>
