--- a/assets/scss/screen.scss
+++ b/assets/scss/screen.scss
@@ -6,7 +6,7 @@
 @import "utils/reset";
 
 /* SELECTED THEME (Just declares variables) */
-@import "themes/dark";
+@import "themes/light";
 
 /* Styles */
 @import "partials/compat";
