--- a/assets/scss/themes/light.scss
+++ b/assets/scss/themes/light.scss
@@ -29,3 +29,6 @@ $footer-text-color: $white;
 /* Post */
 $post-background-color: $white;
 $post-accent-color: $muted-accent;
+
+/* Cards */
+$card-background-color: $muted-accent;
