--- a/assets/scss/themes/dark.scss
+++ b/assets/scss/themes/dark.scss
@@ -8,6 +8,7 @@ $white: #eae7dc;
 $black: darken($grey, 25%);
 
 $primary-background-color: $secondary;
+$secondary-background-color: $primary;
 
 /* Typography */
 $header-text-color: $muted-accent;
