--- a/assets/scss/themes/light.scss
+++ b/assets/scss/themes/light.scss
@@ -7,6 +7,7 @@ $white: #eae7dc;
 $black: darken($grey, 25%);
 
 $primary-background-color: $primary;
+$secondary-background-color: $grey;
 
 /* Typography */
 $header-text-color: $accent;
