Mobile menu closes when `body` is pressed

--- a/default.hbs
+++ b/default.hbs
@@ -5,7 +5,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="HandheldFriendly" content="True" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/zenburn.min.css">
     <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
     <script src="https://kit.fontawesome.com/f6de1a174c.js"></script>
@@ -23,6 +26,7 @@
         {{> "mobile-footer"}}
       </div>
     </div>
+    <div class="overlay"></div>
     <script
         src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
