--- a/assets/scss/partials/mobile.scss
+++ b/assets/scss/partials/mobile.scss
@@ -4,13 +4,32 @@ body {
   &.mobile-menu-open {
     margin-left: $sidebar-width;
 
+    .overlay {
+      display: block;
+      opacity: 1;
+    }
+
     nav#mobile-header {
       left: $sidebar-width;
+
       .menu {
         left: 0;
       }
     }
   }
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba($primary-background-color, 0.95);
+  transition: opacity 0.25s ease-in-out;
+  opacity: 0;
+  z-index: 9000;
 }
 
 nav#mobile-header {
@@ -21,7 +40,7 @@ nav#mobile-header {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 100;
+    z-index: 10000;
     top: 0;
     left: 0;
     right: 0;
@@ -62,6 +81,7 @@ nav#mobile-header {
       width: $sidebar-width;
       background: $sidebar-background-color;
       transition: left 0.25s ease-in-out;
+
       .inner {
         padding: 20px;
 
